crates/uitest/fixtures/parser/extern_.snap
---
source: crates/uitest/tests/parser.rs
expression: diags
input_file: crates/uitest/fixtures/parser/extern_.fe
---
error[1-0001]: only `fn` is allowed in the block
  ┌─ extern_.fe:4:5
  │
4 │     struct Foo {
  │     ^^^^^^ only `fn` is allowed in the block


